--- a/contact.html
+++ b/contact.html
@@ -20,14 +20,14 @@
           <li><a href="../index.html">about me</a></li>
           <li><a href="work.html">work experiences</a></li>
           <li><a href="portfolio.html">my projects</a></li>
-          <li class="current"><a href="assignments.html">assignments</a></li>
-          <li><a href="contact.html">contact</a></li>
+          <li><a href="assignments.html">assignments</a></li>
+          <li class="current"><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="site_content">
       <div id="sidebar_container">
-        <div id="gallery">
+        <div class="gallery">
           <ul class="images">
             <li class="show"><img width="450" height="450" src="images/1.jpg" alt="photo_one" /></li>
             <li><img width="450" height="450" src="images/2.jpg" alt="photo_two" /></li>
@@ -38,14 +38,9 @@
         </div>
       </div>
       <div id="content">
-        <h1>Assignments</h1>
-        <div id="assign_container">
-          <h4 class="select"><a href="https://einsophxi.github.io/">Assignment 0</a></h4>
-          <p>hi</p>
-          <h4><a href="#">Assignment 1</a></h4>
-          <p>hi</p>
-        </div>
-        <p></p>
+        <h1>Contact Me</h1>
+        <p>Email: hwangr@bu.edu</p>
+        <p>Phone Number: (949) 677-8111</p>
       </div>
     </div>
 
