--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <nav>
         <ul class="lavaLampWithImage" id="lava_menu">
           <li class="current"><a href="index.html">about me</a></li>
-          <li><a href="Components/work.html">work experiences</a></li>
-          <li><a href="Components/portfolio.html">my projects</a></li>
-          <li><a href="Components/assignments.html">assignments</a></li>
-          <li><a href="Components/contact.html">contact</a></li>
+          <li><a href="work.html">work experiences</a></li>
+          <li><a href="portfolio.html">my projects</a></li>
+          <li><a href="assignments.html">assignments</a></li>
+          <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </header>
@@ -39,8 +39,8 @@
       </div>
       <div id="content">
         <h1>About Me</h1>
-        <p></p>
-        <p></p>
+        <p>Hi, I'm Ryan Hwang!</p>
+        <p>I am currently a computer science student in the class of 2026</p>
       </div>
     </div>
 
