--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>website</title>
+  <title>rhweb-work_experience</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
