--- a/assignments.html
+++ b/assignments.html
@@ -44,7 +44,8 @@
           <p>Created a python file that took user inputs for number 1 and number 2, casted them to ints, and returned the sum.</p>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-0">Github Link</a></h3>
           <h4>Assignment 1</h4>
-          <p>...</p>
+          <p>Used data that students gathered from CDS and found the optimal standing position to minimize the distance to an open elevator using probability and weighted averages</p>
+          <h3><a href="https://github.com/EinsophXI/hwangr-assignment-1">Github Link</a></h3>
         </div>
         <p></p>
       </div>
