--- a/assignments.html
+++ b/assignments.html
@@ -46,6 +46,9 @@
           <h4>Assignment 1</h4>
           <p>Used data that students gathered from CDS and found the optimal standing position to minimize the distance to an open elevator using probability and weighted averages</p>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-1">Github Link</a></h3>
+          <h4>Assignment 2</h4>
+          <video src="https://www.youtube.com/watch?v=w4HKuSNuFPg" controls width="300"> </video>
+          <h3><a href="https://github.com/EinsophXI/hwangr-assignment-2">Github Link</a></h3>
         </div>
         <p></p>
       </div>
