--- a/assignments.html
+++ b/assignments.html
@@ -47,7 +47,7 @@
           <p>Used data that students gathered from CDS and found the optimal standing position to minimize the distance to an open elevator using probability and weighted averages</p>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-1">Github Link</a></h3>
           <h4>Assignment 2</h4>
-          <video src="https://www.youtube.com/watch?v=w4HKuSNuFPg" controls width="300"> </video>
+          <iframe width="400" height="225" src="https://www.youtube.com/embed/w4HKuSNuFPg?si=Av-jwh40VNXEPRws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-2">Github Link</a></h3>
         </div>
         <p></p>
