--- a/assignments.html
+++ b/assignments.html
@@ -49,6 +49,9 @@
           <h4>Assignment 2</h4>
           <iframe width="400" height="225" src="https://www.youtube.com/embed/w4HKuSNuFPg?si=Av-jwh40VNXEPRws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-2">Github Link</a></h3>
+          <h4>Assignment 3</h4>
+          <p>Implemented SVD for dimensionality reduction and used different numbers of SVD components to gather data on how it impacts the performance of the model.</p>
+          <h3><a href="https://github.com/EinsophXI/hwangr-assignment-3">Github Link</a></h3>          
         </div>
         <p></p>
       </div>
