--- a/assignments.html
+++ b/assignments.html
@@ -52,6 +52,9 @@
           <h4>Assignment 3</h4>
           <p>Implemented SVD for dimensionality reduction and used different numbers of SVD components to gather data on how it impacts the performance of the model.</p>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-3">Github Link</a></h3>          
+          <h4>Assignment 4</h4>
+          <iframe width="400" height="225" src="https://www.youtube.com/embed/L6WtM7D0Bd4?si=4MomrlncFxfU976w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <h3><a href="https://github.com/EinsophXI/hwangr-assignment-4">Github Link</a></h3>
         </div>
         <p></p>
       </div>
