--- a/assignments.html
+++ b/assignments.html
@@ -55,6 +55,9 @@
           <h4>Assignment 4</h4>
           <iframe width="400" height="225" src="https://www.youtube.com/embed/L6WtM7D0Bd4?si=4MomrlncFxfU976w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-4">Github Link</a></h3>
+          <h4>Assignment 5</h4>
+          <p>Implemented K-Nearest Neighbors to find the probability of customers churning based on features.</p>
+          <h3><a href="https://github.com/EinsophXI/hwangr-assignment-5">Github Link</a></h3>
         </div>
         <p></p>
       </div>
