--- a/assignments.html
+++ b/assignments.html
@@ -58,6 +58,9 @@
           <h4>Assignment 5</h4>
           <p>Implemented K-Nearest Neighbors to find the probability of customers churning based on features.</p>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-5">Github Link</a></h3>
+          <h4>Assignment 6</h4>
+          <p>Trained a model to predict ratings of an Amazon Movie based on the review.</p>
+          <h3><a href="https://github.com/EinsophXI/hwangr-midterm">Github Link</a></h3>
         </div>
         <p></p>
       </div>
