--- a/assignments.html
+++ b/assignments.html
@@ -58,9 +58,12 @@
           <h4>Assignment 5</h4>
           <p>Implemented K-Nearest Neighbors to find the probability of customers churning based on features.</p>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-5">Github Link</a></h3>
-          <h4>Assignment 6</h4>
+          <h4>Midterm</h4>
           <p>Trained a model to predict ratings of an Amazon Movie based on the review.</p>
           <h3><a href="https://github.com/EinsophXI/hwangr-midterm">Github Link</a></h3>
+          <h4>Assignment 6</h4>
+          <iframe width="400" height="225" src="https://www.youtube.com/embed/7O8DTXmaHuw?si=vD6pRVEvZH4eXfLI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <h3><a href="https://github.com/EinsophXI/hwangr-assignment-6">Github Link</a></h3>
         </div>
         <p></p>
       </div>
