--- a/assignments.html
+++ b/assignments.html
@@ -64,6 +64,9 @@
           <h4>Assignment 6</h4>
           <iframe width="400" height="225" src="https://www.youtube.com/embed/7O8DTXmaHuw?si=vD6pRVEvZH4eXfLI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-6">Github Link</a></h3>
+          <h4>Assignment 7</h4>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Iv-hWwVsDHo?si=DATXyJ-X7eb8TuoT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <h3><a href="https://github.com/EinsophXI/hwangr-assignment-7">Github Link</a></h3>
         </div>
         <p></p>
       </div>
