--- a/assignments.html
+++ b/assignments.html
@@ -73,6 +73,9 @@
           <h4>Assignment 9</h4>
           <iframe width="400" height="225" src="https://www.youtube.com/embed/--fMspasD4E?si=xskQVTtyb2IqMX6w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <h3><a href="https://github.com/EinsophXI/hwangr-assignment-9">Github Link</a></h3>
+          <h4>Assignment 10</h4>
+          <iframe width="400" height="225" src="https://www.youtube.com/embed/OJabTP-m5qk?si=2uuhTYN-hG5RjTIV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <h3><a href="https://github.com/EinsophXI/hwangr-assignment-10">Github Link</a></h3>
         </div>
         <p></p>
       </div>
